--- a/FivePD Bank Robbery/FivePD Bank Robbery.csproj
+++ b/FivePD Bank Robbery/FivePD Bank Robbery.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FivePD_Bank_Robbery</RootNamespace>
-    <AssemblyName>FivePD Bank Robbery</AssemblyName>
+    <AssemblyName>BankRobbery.net</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
